# Blog-Generator-Agent

./: .gitignore  DEPLOYMENT.md  README.md  app.py  handler.py  pyproject.toml  requirements.txt  vercel.json
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
api/: index.py
frontend/: .env.example  DESIGN_DOCUMENT.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: BlogPreview.jsx  Header.jsx  TabNavigation.jsx  Toast.jsx  TopicBlogForm.jsx  YouTubeBlogForm.jsx
frontend/src/services/: api.js
src/graphs/: graph_builder.py
src/llms/: groqllm.py
src/nodes/: blog_node.py
src/states/: blogstate.py
