[project]
name = "projet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.4",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.2",
    "langchain-groq>=1.0.0",
    "langgraph>=1.0.2",
    "langgraph-cli[inmem]>=0.4.5",
    "mangum>=0.19.0",
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
    "watchdog>=6.0.0",
    "youtube-transcript-api>=1.2.3",
    "yt-dlp>=2025.10.22",
]
